--- a/assets/nav-menu/modal.css
+++ b/assets/nav-menu/modal.css
@@ -67,6 +67,7 @@
   grid-template-rows: repeat(3, 4px);
   align-content: space-between;
   padding: 0;
+  margin-right: 1rem;
   background: none;
   border: none;
   cursor: pointer;
@@ -340,5 +341,9 @@
 @media (max-width: 500px) {
   .su-nav-header {
     gap: 1rem;
+  }
+
+  .su-nav-hamburger {
+    margin-right: 0;
   }
 }
